# RealTimeModalAnalysis

./: 00_atemp.py  01_attemp.py  02_attemp.py  Module_test.ipynb  README.md  SignalAnalisys.ipynb  Signal_viewer.py  Untitled.ipynb  Untitled1.ipynb  acquisition.py  acquisition_data.db  communication_test.py  config.py  continouly_monitor_and_print.py  database.py  gui.py  list_devices.py  live_stream00.py  live_stream01.py  live_stream02.py  main.py  main_functions.py  new_rty.py  plotting.py  pyproject.toml  reading_file.py  simple_acquisition_and_plot.py  tutor_00.py  vibration_data.sqlite  vibration_data00.sqlite  vibration_data_20250321_102018.sqlite  vibration_data_20250321_115602.sqlite  wing_one_vibration_analysis.ipynb  working_00.py
iframe_figures/: figure_14.html  figure_27.html  figure_28.html  figure_29.html  figure_30.html  figure_31.html
modal_analysis/: core.py
